HelloUltraviolet/Fixtures/RejectedSource/Statements/AssignTypeMismatch/Source/Main.uv
//! Rejected statement specimen for assignment type mismatch.

public procedure assignTypeMismatchReference() -> i32 {
    var value: i32 = 1
    value = true
    return value
}
